--- a/package.json
+++ b/package.json
@@ -125,6 +125,7 @@
 	"dependencies": {
 		"azure-arm-resource": "^7.3.0",
 		"azure-arm-search": "^1.3.0-preview",
-		"vscode-azureextensionui": "^0.25.0"
+		"vscode-azureextensionui": "^0.25.0",
+		"axios": "^0.19.0"
 	}
 }
