--- a/package.json
+++ b/package.json
@@ -120,12 +120,14 @@
 		"tslint": "^5.12.1",
 		"@types/node": "^10.12.21",
 		"@types/mocha": "^2.2.42",
+		"@types/fs-extra": "^8.0.0",
 		"vscode-azureextensiondev": "0.1.8"
 	},
 	"dependencies": {
+		"axios": "^0.19.0",
 		"azure-arm-resource": "^7.3.0",
 		"azure-arm-search": "^1.3.0-preview",
-		"vscode-azureextensionui": "^0.25.0",
-		"axios": "^0.19.0"
+		"fs-extra": "^8.1.0",
+		"vscode-azureextensionui": "^0.25.0"
 	}
 }
