--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
 	"name": "vscode-azuresearch",
 	"displayName": "Azure Search",
-	"description": "Manage your Azure Search services",
+	"description": "Manage your Azure Search services, explore and manipulate index content, view and update indexes, data sources, indexers, synonyms, and skillsets.",
 	"version": "0.0.1",
 	"publisher": "pmc",
 	"aiKey": "AIF-d9b70cd4-b9f9-4d70-929b-a071c400b217",
 	"engines": {
-		"vscode": "^1.34.0"
+		"vscode": "^1.35.1"
 	},
 	"categories": [
 		"Azure"
@@ -15,6 +15,7 @@
 		"Azure",
 		"Search"
 	],
+	"icon": "media/AzureSearch.png",
 	"preview": true,
 	"activationEvents": [
 		"onView:azureSearch",
