Add json schema-based validation for index definition.

--- a/package.json
+++ b/package.json
@@ -169,7 +169,13 @@
 					"description": "Show or hide the Azure Search Explorer"
 				}
 			}
-		}
+		},
+		"jsonValidation": [
+			{
+				"fileMatch": "*.azsindex",
+				"url": "./schema/index.json"
+			}
+		]
 	},
 	"scripts": {
 		"vscode:prepublish": "npm run compile",
