--- a/package.json
+++ b/package.json
@@ -174,6 +174,10 @@
 			{
 				"fileMatch": "*.azsindex",
 				"url": "./schema/index.json"
+			},
+			{
+				"fileMatch": "*.azssymmap",
+				"url": "./schema/synonymmap.json"
 			}
 		]
 	},
