--- a/package.json
+++ b/package.json
@@ -178,6 +178,18 @@
 			{
 				"fileMatch": "*.azssymmap",
 				"url": "./schema/synonymmap.json"
+			},
+			{
+				"fileMatch": "*.azsds",
+				"url": "./schema/datasource.json"
+			},
+			{
+				"fileMatch": "*.azsindexer",
+				"url": "./schema/indexer.json"
+			},
+			{
+				"fileMatch": "*.azsskset",
+				"url": "./schema/skillset.json"
 			}
 		]
 	},
