Add repository to package.json and update dependency versions

--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
 		"color": "#0072c6",
 		"theme": "dark"
 	},
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/pablocastro/vscode-azuresearch"
+	},
 	"icon": "media/AzureSearch.png",
 	"preview": true,
 	"activationEvents": [
