--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
 		"vscode": "^1.35.1"
 	},
 	"categories": [
-		"Azure"
+		"Azure",
+		"Snippets"
 	],
 	"keywords": [
 		"Azure",
@@ -329,27 +330,35 @@
 	"scripts": {
 		"vscode:prepublish": "npm run compile",
 		"compile": "tsc -p ./",
+		"lint": "eslint src --ext ts",
 		"watch": "tsc -watch -p ./",
-		"postinstall": "node ./node_modules/vscode/bin/install",
-		"test": "npm run compile && node ./node_modules/vscode/bin/test"
+		"pretest": "npm run compile && npm run lint",
+		"test": "node ./out/test/runTest.js"
 	},
 	"extensionDependencies": [
 		"ms-vscode.azure-account"
 	],
 	"devDependencies": {
-		"typescript": "^3.3.1",
-		"vscode": "^1.1.28",
-		"tslint": "^5.12.1",
-		"@types/node": "^10.12.21",
-		"@types/mocha": "^2.2.42",
-		"@types/fs-extra": "^8.0.0",
-		"vscode-azureextensiondev": "0.1.8"
+		"@types/fs-extra": "^8.1.1",
+		"vscode-azureextensiondev": "0.4.0",
+		"@types/vscode": "^1.45.0",
+		"@types/glob": "^7.1.1",
+		"@types/mocha": "^7.0.2",
+		"@types/node": "^13.11.0",
+		"eslint": "^6.8.0",
+		"@typescript-eslint/parser": "^2.30.0",
+		"@typescript-eslint/eslint-plugin": "^2.30.0",
+		"glob": "^7.1.6",
+		"mocha": "^7.1.2",
+		"typescript": "^3.8.3",
+		"vscode-test": "^1.3.0"
 	},
 	"dependencies": {
-		"axios": "^0.19.0",
+		"axios": "^0.19.2",
 		"azure-arm-resource": "^7.3.0",
 		"azure-arm-search": "^1.3.0-preview",
 		"fs-extra": "^8.1.0",
-		"vscode-azureextensionui": "^0.25.0"
+		"vscode-azureextensionui": "^0.33.1",
+		"vscode-extension-telemetry": "^0.1.6"
 	}
 }
