manually adding webpack changes from pablo's branch

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -5,16 +5,21 @@
 	"tasks": [
 		{
 			"type": "npm",
-			"script": "watch",
-			"problemMatcher": "$tsc-watch",
-			"isBackground": true,
-			"presentation": {
-				"reveal": "never"
-			},
+			"script": "compile",
 			"group": {
 				"kind": "build",
 				"isDefault": true
-			}
+			},
+			"isBackground": true,
+			"presentation": {
+				"reveal": "silent"
+			},
+			"problemMatcher": "$tsc-watch"
+		},
+		{
+			"type": "npm",
+			"script": "lint",
+			"problemMatcher": "$tslint5"
 		}
 	]
 }
