--- a/.vscodeignore
+++ b/.vscodeignore
@@ -1,9 +1,18 @@
 .vscode/**
 .vscode-test/**
-out/test/**
-src/**
+node_modules
+out/
+src/
 .gitignore
 **/tsconfig.json
 **/tslint.json
 **/*.map
 **/*.ts
+webpack.config.js
+.azure-pipelines/**
+gulp*
+build/**
+dist/test/**
+stats.json
+test/
+testOutput/
