--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
 		"onCommand:azureSearch.search",
 		"onCommand:azureSearch.searchDoc"
 	],
-	"main": "./out/extension.js",
+	"main": "main",
 	"contributes": {
 		"viewsContainers": {
 			"activitybar": [
@@ -343,15 +343,25 @@
 		"vscode-azureextensiondev": "0.4.0",
 		"@types/vscode": "^1.45.0",
 		"@types/glob": "^7.1.1",
+		"@types/gulp": "^4.0.6",
 		"@types/mocha": "^7.0.2",
 		"@types/node": "^13.11.0",
+		"@types/webpack": "^4.32.1",
+		"copy-webpack-plugin": "^5.0.3",
 		"eslint": "^6.8.0",
 		"@typescript-eslint/parser": "^2.30.0",
 		"@typescript-eslint/eslint-plugin": "^2.30.0",
 		"glob": "^7.1.6",
 		"mocha": "^7.1.2",
+		"file-loader": "^4.1.0",
+		"gulp": "^4.0.2",
+		"gulp-cli": "^2.2.0",
+		"ts-loader": "^6.0.4",
+		"ts-node": "^8.3.0",
 		"typescript": "^3.8.3",
-		"vscode-test": "^1.3.0"
+		"vscode-test": "^1.3.0",
+		"webpack": "^4.37.0",
+		"webpack-cli": "^3.3.6"
 	},
 	"dependencies": {
 		"axios": "^0.19.2",
