adding snippets, icons, and create/delete functionality for idnexes

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,14 @@
 		],
 		"sourceMap": true,
 		"rootDir": ".",
-		"strict": true   /* enable all strict type-checking options */
+		"strict": true,   /* enable all strict type-checking options */
+		"baseUrl": "./",
+        "paths": {
+            "*": [
+                "node_modules/@types/*",
+                "*"
+            ]
+        }
 		/* Additional Checks */
 		// "noImplicitReturns": true, /* Report error when not all code paths in function return a value. */
 		// "noFallthroughCasesInSwitch": true, /* Report errors for fallthrough cases in switch statement. */
@@ -16,6 +23,7 @@
 	},
 	"exclude": [
 		"node_modules",
-		".vscode-test"
+		".vscode-test",
+		"gulpfile.ts"
 	]
 }
