--- a/package.json
+++ b/package.json
@@ -50,6 +50,28 @@
 	],
 	"main": "main",
 	"contributes": {
+		"snippets": [
+			{
+				"language": "json",
+				"path": "snippets/index-snippets.json"
+			},
+			{
+				"language": "json",
+				"path": "snippets/indexer-snippets.json"
+			},
+			{
+				"language": "json",
+				"path": "snippets/synonym-snippets.json"
+			},
+			{
+				"language": "json",
+				"path": "snippets/datasource-snippets.json"
+			},
+			{
+				"language": "json",
+				"path": "snippets/skillset-snippets.json"
+			}
+		],
 		"viewsContainers": {
 			"activitybar": [
 				{
@@ -128,6 +150,16 @@
 			{
 				"command": "azureSearch.createIndexer",
 				"title": "Create new indexer",
+				"category": "Azure Search"
+			},
+			{
+				"command": "azureSearch.deleteIndex",
+				"title": "Delete index",
+				"category": "Azure Search"
+			},
+			{
+				"command": "azureSearch.createIndex",
+				"title": "Create new index",
 				"category": "Azure Search"
 			},
 			{
@@ -236,6 +268,16 @@
 					"group": "navigation@98"
 				},
 				{
+					"command": "azureSearch.createIndex",
+					"when": "view == azureSearch && viewItem == azureSearchIndexList",
+					"group": "navigation@98"
+				},
+				{
+					"command": "azureSearch.deleteIndex",
+					"when": "view == azureSearch && viewItem == azureSearchIndex",
+					"group": "navigation@98"
+				},
+				{
 					"command": "azureSearch.createSkillset",
 					"when": "view == azureSearch && viewItem == azureSearchSkillsetList",
 					"group": "navigation@98"
@@ -332,43 +374,43 @@
 		]
 	},
 	"scripts": {
-        "vscode:prepublish": "npm run webpack-prod",
-        "build": "tsc",
-        "compile": "tsc -watch",
-        "package": "vsce package",
-        "lint": "tslint --project tsconfig.json -t verbose",
-        "lint-fix": "tslint --project tsconfig.json -t verbose --fix",
-        "pretest": "npm run webpack-prod && gulp preTest",
-        "test": "node ./out/test/runTest.js",
-        "webpack": "npm run build && gulp webpack-dev",
-        "webpack-prod": "npm run build && gulp webpack-prod",
-        "webpack-profile": "webpack --profile --json --mode production > webpack-stats.json && echo Use http://webpack.github.io/analyse to analyze the stats",
-        "all": "npm i && npm run lint && npm test"
+		"vscode:prepublish": "npm run webpack-prod",
+		"build": "tsc",
+		"compile": "tsc -watch",
+		"package": "vsce package",
+		"lint": "tslint --project tsconfig.json -t verbose",
+		"lint-fix": "tslint --project tsconfig.json -t verbose --fix",
+		"pretest": "npm run webpack-prod && gulp preTest",
+		"test": "node ./out/test/runTest.js",
+		"webpack": "npm run build && gulp webpack-dev",
+		"webpack-prod": "npm run build && gulp webpack-prod",
+		"webpack-profile": "webpack --profile --json --mode production > webpack-stats.json && echo Use http://webpack.github.io/analyse to analyze the stats",
+		"all": "npm i && npm run lint && npm test"
 	},
 	"extensionDependencies": [
 		"ms-vscode.azure-account"
 	],
 	"devDependencies": {
 		"@types/fs-extra": "^8.1.1",
-		"vscode-azureextensiondev": "0.4.0",
-		"@types/vscode": "^1.45.0",
 		"@types/glob": "^7.1.1",
 		"@types/gulp": "^4.0.6",
 		"@types/mocha": "^7.0.2",
 		"@types/node": "^13.11.0",
+		"@types/vscode": "^1.45.0",
 		"@types/webpack": "^4.32.1",
+		"@typescript-eslint/eslint-plugin": "^2.30.0",
+		"@typescript-eslint/parser": "^2.30.0",
 		"copy-webpack-plugin": "^5.0.3",
 		"eslint": "^6.8.0",
-		"@typescript-eslint/parser": "^2.30.0",
-		"@typescript-eslint/eslint-plugin": "^2.30.0",
-		"glob": "^7.1.6",
-		"mocha": "^7.1.2",
 		"file-loader": "^4.1.0",
+		"glob": "^7.1.6",
 		"gulp": "^4.0.2",
 		"gulp-cli": "^2.2.0",
+		"mocha": "^7.1.2",
 		"ts-loader": "^6.0.4",
 		"ts-node": "^8.3.0",
 		"typescript": "^3.8.3",
+		"vscode-azureextensiondev": "0.4.0",
 		"vscode-test": "^1.3.0",
 		"webpack": "^4.37.0",
 		"webpack-cli": "^3.3.6"
