--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 	"aiKey": "AIF-d9b70cd4-b9f9-4d70-929b-a071c400b217",
 	"license": "SEE LICENSE IN LICENSE.md",
 	"engines": {
-		"vscode": "^1.35.1"
+		"vscode": "^1.45.0"
 	},
 	"categories": [
 		"Azure",
@@ -420,6 +420,7 @@
 		"azure-arm-resource": "^7.3.0",
 		"azure-arm-search": "^1.3.0-preview",
 		"fs-extra": "^8.1.0",
+		"vsce": "^1.77.0",
 		"vscode-azureextensionui": "^0.33.1",
 		"vscode-extension-telemetry": "^0.1.6"
 	}
