--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
 	"name": "vscode-azuresearch",
-	"displayName": "Azure Search",
-	"description": "Manage your Azure Search services, explore and manipulate index content, view and update indexes, data sources, indexers, synonyms, and skillsets.",
-	"version": "0.0.2",
-	"publisher": "pmc",
+	"displayName": "Azure Cognitive Search",
+	"description": "Manage your Azure Cognitive Search services, explore and manipulate index content, view and update indexes, data sources, indexers, synonyms, and skillsets.",
+	"version": "0.0.3",
+	"publisher": "Microsoft",
 	"aiKey": "AIF-d9b70cd4-b9f9-4d70-929b-a071c400b217",
 	"license": "SEE LICENSE IN LICENSE.md",
 	"engines": {
