--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"displayName": "Azure Cognitive Search",
 	"description": "Manage your Azure Cognitive Search services, create indexes, add documents, search, and more.",
 	"version": "0.0.3",
-	"publisher": "Microsoft",
+	"publisher": "ms-azuretools",
 	"aiKey": "AIF-d9b70cd4-b9f9-4d70-929b-a071c400b217",
 	"license": "SEE LICENSE IN LICENSE.md",
 	"engines": {
