--- a/.azure-pipelines/main.yml
+++ b/.azure-pipelines/main.yml
@@ -4,6 +4,7 @@ jobs:
     vmImage: windows-latest
   steps:
   - template: common/build.yml
+  - template: common/test.yml
 
 - job: Linux
   pool:
@@ -11,12 +12,14 @@ jobs:
   steps:
   - template: common/build.yml
   - template: common/publish-vsix.yml # Only publish vsix from linux build since we use this to release and want to stay consistent
+  - template: common/test.yml
 
 - job: macOS
   pool:
     vmImage: macOS-latest
   steps:
   - template: common/build.yml
+  - template: common/test.yml
 
 trigger:
   branches:
