--- a/package.json
+++ b/package.json
@@ -413,10 +413,9 @@
 		"@types/mocha": "^7.0.2",
 		"@types/node": "^13.11.0",
 		"@types/vscode": "^1.45.0",
-		"@types/webpack": "^4.32.1",
 		"@typescript-eslint/eslint-plugin": "^2.30.0",
 		"@typescript-eslint/parser": "^2.30.0",
-		"copy-webpack-plugin": "^5.0.3",
+		"copy-webpack-plugin": "^5.1.1",
 		"eslint": "^6.8.0",
 		"file-loader": "^4.1.0",
 		"glob": "^7.1.6",
@@ -426,9 +425,9 @@
 		"ts-loader": "^6.0.4",
 		"ts-node": "^8.3.0",
 		"typescript": "^3.8.3",
-		"vscode-azureextensiondev": "0.4.0",
+		"vscode-azureextensiondev": "^0.4.0",
 		"vscode-test": "^1.3.0",
-		"webpack": "^4.37.0",
+		"webpack": "^4.42.0",
 		"webpack-cli": "^3.3.6"
 	},
 	"dependencies": {
