updating readme, changelog, and adding support for post queries

--- a/package.json
+++ b/package.json
@@ -160,7 +160,7 @@
 			},
 			{
 				"command": "azureCognitiveSearch.openSearchEditor",
-				"title": "Search index",
+				"title": "Query index",
 				"category": "Azure Cognitive Search"
 			},
 			{
