final updates to support queries from preview api version

--- a/package.json
+++ b/package.json
@@ -160,7 +160,7 @@
 			},
 			{
 				"command": "azureCognitiveSearch.openSearchEditor",
-				"title": "Query index",
+				"title": "Search",
 				"category": "Azure Cognitive Search"
 			},
 			{
